--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,12 @@
 {
-  "name": "ember-example",
-  "version": "0.0.0",
+  "name": "protocode",
+  "version": "0.0.1",
   "dependencies": {
-    "ember": "1.3.2",
-    "handlebars": "1.2.1",
-    "ember-data": "1.0.0-beta.5",
-    "bootstrap-sass": "~3.0.0"
+    "ember": "1.5.0",
+    "handlebars": "1.3.0",
+    "ember-data": "1.0.0-beta.7",
+    "bootstrap-sass-official": "~3.1.1",
+    "font-awesome": "latest"
   },
   "devDependencies": {
     "ember-mocha-adapter": "0.1.2"
