--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ember-example",
-  "version": "0.0.0",
+  "name": "protocode",
+  "version": "0.0.1",
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -14,10 +14,10 @@
     "grunt-contrib-connect": "~0.3.0",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-contrib-imagemin": "~0.2.0",
+    "grunt-contrib-imagemin": "~0.5.0",
     "grunt-contrib-watch": "~0.5.2",
     "grunt-rev": "~0.1.0",
-    "grunt-usemin": "~0.1.12",
+    "grunt-usemin": "~2.1.1",
     "grunt-mocha": "~0.4.1",
     "grunt-open": "~0.2.0",
     "grunt-svgmin": "~0.2.0",
