--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,11 @@
   "version": "0.0.1",
   "dependencies": {
     "ember": "1.5.1",
-    "handlebars": "1.3.0",
+    "handlebars": "~1.3.0",
     "ember-data": "1.0.0-beta.8",
     "bootstrap-sass-official": "~3.1.1",
-    "font-awesome": "latest"
+    "font-awesome": "latest",
+    "FileSaver": "*"
   },
   "devDependencies": {
     "ember-mocha-adapter": "0.1.2"
