--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "ember-data": "1.0.0-beta.8",
     "bootstrap-sass-official": "~3.1.1",
     "font-awesome": "latest",
-    "FileSaver": "*"
+    "FileSaver": "*",
+    "ember-localstorage-adapter": "~0.3.1"
   },
   "devDependencies": {
     "ember-mocha-adapter": "0.1.2"
