--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "bootstrap-sass-official": "~3.1.1",
     "font-awesome": "latest",
     "FileSaver": "*",
-    "ember-localstorage-adapter": "~0.3.1"
+    "ember-localstorage-adapter": "~0.3.1",
+    "blob": "*"
   },
   "devDependencies": {
     "ember-mocha-adapter": "0.1.2"
