--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "font-awesome": "latest",
     "FileSaver": "*",
     "ember-localstorage-adapter": "~0.3.1",
-    "blob": "*"
+    "blob": "*",
+    "vkbeautify-wrapper": "*"
   },
   "devDependencies": {
     "ember-mocha-adapter": "0.1.2"
