--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "dependencies": {
     "ember": "1.6.1",
-    "handlebars": "~1.3.0",
+    "handlebars": "1.3.0",
     "ember-data": "1.0.0-beta.8",
     "bootstrap-sass-official": "~3.1.1",
-    "font-awesome": "latest",
+    "font-awesome": "4.1.0",
     "FileSaver": "*",
     "ember-localstorage-adapter": "0.3.1",
     "blob": "*",
